<resources>
    <string name="app_name">h2x</string>
    <string name="action_settings">Settings</string>


    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="action_login">LogIn</string>
    <string name="hint_remember_me">Remember Me</string>
    <string name="action_logout">Logout</string>
    <string name="title_confirm">Confirm</string>
    <string name="message_logout_confirm">Do you really want to logout ?</string>
    <string name="hint_email">Enter your official email</string>
    <string name="action_set_from_date">SET FROM DATE</string>
    <string name="action_set_to_date">SET TO DATE</string>
    <string name="hint_project_name">Project Name</string>
    <string name="error_delete_form_item_empty">Item list can\'t be empty</string>
    <string name="action_add_form_item">Add Form Item</string>
    <string name="error_delete_form_item_index">You\'re fast :|</string>
    <string name="error_date_from_first">Please select from date first</string>
    <string name="label_to">to</string>
    <string name="label_from">from</string>
    <string name="title_activity_payment">Payment</string>
    <string name="action_next">NEXT</string>
    <string name="label_total_days">Total Days</string>
    <string name="loading">Loading…</string>
    <string name="colon">:</string>
    <string name="label_per_day">Per Day</string>
    <string name="label_sections">Sections</string>
    <string name="label_per_section">Per Section</string>
    <string name="label_total_payable">Total Payable</string>
    <string name="trans_submitted">Submitted</string>
    <string name="message_success">Success!</string>
    <string name="title_payment_success">Payment Success</string>
    <string name="message_payment_success">We\'ve received your payment. Our representative will do the follow up. Thank your for choosing h2x</string>
    <string name="title_payment_submitted">Payment Submitted</string>
    <string name="message_payment_submitted">The payment has been submitted by your UPI client, but the money didn\'t reach in our account. Let\'s wait for a while. Thank you</string>
    <string name="title_payment_failed">Payment Failed</string>
    <string name="loading_placing_order">Placing order…</string>
    <string name="title_order_failed">Order Failed</string>
    <string name="message_order_failed">Uh ho! We\'ve failed to place the order. Please contact our representative :  %s</string>

</resources>
