<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.theapache64.h2x.ui.activities.payment.PaymentHandler" />

        <variable
            name="viewModel"
            type="com.theapache64.h2x.ui.activities.payment.PaymentViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.activities.payment.PaymentActivity"
        tools:showIn="@layout/activity_payment">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!--Total Days-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:weightSum="3">

                    <!--Total Days Label-->
                    <TextView
                        android:id="@+id/tv_label_total_days"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/label_total_days"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/colon" />

                    <TextView
                        android:id="@+id/tv_total_days"
                        fontPath="fonts/GoogleSans-Medium.ttf"
                        android:text="@{String.valueOf(viewModel.totalDays)}"
                        tools:text="65"
                        style="@style/tvPaymentValueStyle" />

                </LinearLayout>

                <!--Per day-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:weightSum="3">
                    <!--Total Days Label-->
                    <TextView
                        android:id="@+id/tv_label_per_day"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/label_per_day"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/colon" />

                    <TextView
                        android:id="@+id/tv_per_day"
                        fontPath="fonts/GoogleSans-Medium.ttf"
                        android:text="@{`Rs `+viewModel.perDay}"
                        tools:text="65"
                        style="@style/tvPaymentValueStyle" />

                </LinearLayout>

                <!--Sections-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:weightSum="3">
                    <!--Total Days Label-->
                    <TextView
                        android:id="@+id/tv_label_sections"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/label_sections"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/colon" />

                    <TextView
                        android:id="@+id/tv_sections"
                        fontPath="fonts/GoogleSans-Medium.ttf"
                        android:text="@{String.valueOf(viewModel.totalSections)}"
                        tools:text="65"
                        style="@style/tvPaymentValueStyle" />

                </LinearLayout>

                <!--Per Section-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/tv_label_per_section"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/label_per_section"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/colon" />

                    <TextView
                        android:id="@+id/tv_label"
                        fontPath="fonts/GoogleSans-Medium.ttf"
                        android:text="@{`Rs ` + viewModel.perSection}"
                        tools:text="65"
                        style="@style/tvPaymentValueStyle" />

                </LinearLayout>

                <!--Total-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/tv_label_total_payable"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/label_total_payable"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/colon" />

                    <TextView
                        android:id="@+id/tv_total_payable"
                        fontPath="fonts/GoogleSans-Bold.ttf"
                        android:text="@{`Rs ` + viewModel.totalPayable}"
                        tools:text="65"
                        style="@style/tvPaymentValueStyle" />

                </LinearLayout>

                <!--Pay Button-->
                <Button
                    android:id="@+id/b_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="@{()->handler.onPayClicked()}"
                    android:text="@{`Pay Rs `+ viewModel.totalPayable}" />


            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.theapache64.twinkill.ui.widgets.LoadingView
            android:id="@+id/lv_prefs"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</layout>